# ncdu-compare

./: LICENSE  README.md  ncdu-compare  pyproject.toml  setup.py
ncdu_compare/: __init__.py
